Bug 144073 - UI. Corner of screen appears white when presenting, using the Lights template (Windows-only)
Summary: UI. Corner of screen appears white when presenting, using the Lights template...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha1+
Hardware: x86-64 (AMD64) Windows (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.1 target:24.2...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-08-25 03:03 UTC by Manish
Modified: 2023-08-21 16:37 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshots showing design mode and present mode views (199.08 KB, application/x-zip-compressed)
2021-08-25 03:03 UTC, Manish
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Manish 2021-08-25 03:03:55 UTC
Created attachment 174526 [details]
Screenshots showing design mode and present mode views

Using the Lights template for a new file, when entering present/slide show mode the top right corner of the screen shows a white triangle. This overlays any content from the slide. It's shown on all slides in the presentation file.

This appears to be with the Lights template only - I've checked 2-3 other templates and they display correctly.

My OS is Windows 10 Version 10.0.19042 Build 19042.
Comment 1 Henrik Palomäki 2021-08-26 07:32:12 UTC
The bug in the Lights template reproduced in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 0224d859b8a497779611cc15943c017ec42f9b90
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: fi-FI (fi_FI); UI: en-US
Calc: CL
Comment 2 Henrik Palomäki 2021-08-30 15:51:57 UTC
I made some additional tests and found that this bug is a regression. 

No repro in (all slides are unbroken)

Version: 6.4.7.2 (x64)
Build ID: 639b8ac485750d5696d7590a72ef1b496725cfb5
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: GL; VCL: win; 
Locale: fi-FI (fi_FI); UI-Language: en-US
Calc: CL

Repro in (the white triangle is on the top left corner)

Version: 7.1.5.2 (x64) / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: fi-FI (fi_FI); UI: en-US
Calc: CL

Repro in (the white triangle is on the top left corner)

Version: 7.2.0.4 (x64) / LibreOffice Community
Build ID: 9a9c6381e3f7a62afc1329bd359cc48accb6435b
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: default; VCL: win
Locale: fi-FI (fi_FI); UI: en-US
Calc: threaded
Comment 3 Deep17 2022-01-27 20:22:51 UTC
Regression Introduced by :

https://git.libreoffice.org/core/commit/a46cb5dc607d1d1af402ff3e8fce731e7427854d


commit a46cb5dc607d1d1af402ff3e8fce731e7427854d	[log]
author	Luboš Luňák <l.lunak@collabora.com>	Tue Nov 17 16:52:38 2020 +0100
committer	Luboš Luňák <l.lunak@collabora.com>	Tue Nov 17 19:25:58 2020 +0100
tree 6bf920806b8d2c5ae6a3b390dc4a6646878e6eee
parent 8b8a988f38b704e466211bb91a3269756c34222b [diff]

Bisected with: bibisect-win64-7.1

Adding Cc: to Luboš Luňák
Comment 4 Commit Notification 2022-02-01 22:45:45 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/adc2ac31fb2763077e48658756946a39d91c8e12

adjust gradient drawing in vclcanvas (tdf#144073)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-02-08 20:56:55 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/cfe402fd7755cb14551db3af39a7da783ef77350

adjust gradient drawing in vclcanvas (tdf#144073)

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-08-16 11:48:30 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6cae6f1b661baafe8a1ac4655765ec49d56317d

tdf#144073 and tdf#147645: use bounds and angle for gradient

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Patrick (volunteer) 2023-08-16 12:16:14 UTC
(In reply to Commit Notification from comment #6)
> Patrick Luby committed a patch related to this issue.
> It has been pushed to "master":
> 
> https://git.libreoffice.org/core/commit/
> f6cae6f1b661baafe8a1ac4655765ec49d56317d
> 
> tdf#144073 and tdf#147645: use bounds and angle for gradient
> 
> It will be available in 24.2.0.

I reimplemented the fix for this bug since the previous fix would draw the gradient incorrectly.

The above fix should be available in tomorrow's (17 August 2023) nightly master build.

Note: I only tested on macOS. I saw the https://bugs.documentfoundation.org/show_bug.cgi?id=147645#c11 comment about hardware acceleration but on macOS, hardware acceleration cannot be enabled so, for macOS, there was only one place in the code that gets used to draw gradients in slideshows.

Can anyone test the fix on Windows or Linux both with and without hardware acceleration enabled?
Comment 8 Commit Notification 2023-08-21 16:37:04 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/6f94daaf7da1c0c380a177f5d7aa06c9a1bfad9b

tdf#144073 and tdf#147645: use bounds and angle for gradient

It will be available in 7.5.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-08-21 16:37:10 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/705566856b647760a2ea3c6a7de9efe4ea1d9e7a

tdf#144073 and tdf#147645: use bounds and angle for gradient

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.