adjust gradient drawing in vclcanvas (tdf#144073)

For whatever strange reason the drawing does not use the given
geometry, but something bigger. When I added direct drawing using
VCL in a46cb5dc607d1d1af402ff3e8fce731e7427854d I naively assumed
that the drawing area for the gradient would be the given area.

Change-Id: Ia62cb0e5046e622679143eef56a3c6782781bf59
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129298
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
(cherry picked from commit adc2ac31fb2763077e48658756946a39d91c8e12)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129263
Reviewed-by: Caolán McNamara <caolanm@redhat.com>